--- a/doc/tutorial.tex
+++ b/doc/tutorial.tex
@@ -121,42 +121,7 @@ int MPI_Finalize(void);
 \section{Porting FFTW-MPI based code to PFFT}\label{sec:porting}
 \todo[inline]{finish FFTW2PFFT porting example}
 We illustrate the close connection between FFTW-MPI and PFFT at a three-dimensional MPI example analogous to the example given in the FFTW manual~\cite{fftw-2dmpi}.
-\begin{lstlisting}
-#include <fftw3-mpi.h>
-     
-int main(int argc, char **argv)
-{
-    const ptrdiff_t n0 = ..., n1 = ..., n2 = ...;
-    fftw_plan plan;
-    fftw_complex *data;
-    ptrdiff_t alloc_local, local_n0, local_0_start, i, j, k;
-
-    MPI_Init(&argc, &argv);
-    fftw_mpi_init();
-
-    /* get local data size and allocate */
-    alloc_local = fftw_mpi_local_size_3d(n0, n1, n2, MPI_COMM_WORLD,
-					 &local_N0, &local_0_start);
-    data = fftw_alloc_complex(alloc_local);
-
-    /* create plan for in-place forward DFT */
-    plan = fftw_mpi_plan_dft_3d(n0, n1, n2, data, data, MPI_COMM_WORLD,
-				FFTW_FORWARD, FFTW_ESTIMATE);
-
-    /* initialize data to some function my_function(x,y) */
-    for (i = 0; i < local_n0; ++i) 
-      for (j = 0; j < n1; ++j) 
-        for (k = 0; k < n2; ++k)
-          data[i*n1*n2 + j*n2 + k] = my_function(local_0_start + i, j, k);
-
-    /* compute transforms, in-place, as many times as desired */
-    fftw_execute(plan);
-
-    fftw_destroy_plan(plan);
-
-    MPI_Finalize();
-}
-\end{lstlisting}
+\lstinputlisting[numbers=left, float, caption={Minimal parallel c2c-FFT test program.}, label=lst:fftw_3don1d]{man_fftw_3don1d.tex}
 
 Exactly the same task can be performed with PFFT as given in Listing~\ref{lst:pfft_3don1d}.
 \begin{lstlisting}
@@ -467,3 +432,6 @@ To use these interfaces, you must
 
 \section{Ghost cell communication}
 \todo[inline]{explain ghost cell communication with a test file}
+
+\section{Fortran interface}
+\todo[inline]{explain F03 interface with a test file}
