exclude deprecated LaTeX packages

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -24,7 +24,7 @@
 % \usepackage{textcmds}
 \usepackage{exscale} % Correct font scaling in formulas
 
-\usepackage{subfigure}
+% \usepackage{subfig}
 % \usepackage{graphicx} % Graphics for figures
 \usepackage[svgnames, table, hyperref]{xcolor} %
 \usepackage{paralist} % compact itemize, enumerate, ...
@@ -58,7 +58,6 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
 
 \usepackage{xspace}
 \usepackage{nicefrac}
-\usepackage{dsfont}
 
 \usepackage{todonotes}
 
