update user manual

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -60,6 +60,11 @@
   Url = {http://www.fftw.org/fftw3_doc/MPI-Initialization.html#MPI-Initialization}
 }
 
+@misc{fftw-r2c-padding,
+  Author = {Matteo Frigo and Steven~G. Johnson},
+  Title = {{FFTW} users manual: {MPI} Initialization},
+  Url = {http://www.fftw.org/fftw3_doc/Real_002ddata-DFT-Array-Format.html#Real_002ddata-DFT-Array-Format}
+}
 
 
 @article{Pi13,
