--- a/doc/reference.tex
+++ b/doc/reference.tex
@@ -936,6 +936,17 @@ double pfft_check_output_complex(
     const pfft_complex *data, MPI_Comm comm);
 \end{lstlisting}
 compute the $l_1$-norm between the elements of array \code{data} and values produced by \code{pfft_init_input_complex_3d}, \code{pfft_init_input_complex}.
+In addition, we supply the following functions for setting all the input data to zero at once
+\begin{lstlisting}
+void pfft_clear_input_complex_3d(
+    const ptrdiff_t *n,
+    const ptrdiff_t *local_n, const ptrdiff_t *local_n_start,
+    pfft_complex *data);
+void pfft_clear_input_complex(
+    int rnk_n, const ptrdiff_t *n,
+    const ptrdiff_t *local_n, const ptrdiff_t *local_start,
+    pfft_complex *data);
+\end{lstlisting}
 
 Note, that these functions can be combined for a quick consistency check of the FFT.
 Since a forward FFT followed by a backward FFT reproduces the inputs up to a scaling factor,
@@ -947,6 +958,10 @@ pfft_init_input_complex_3d(n, local_ni, local_i_start,
 
 /* execute parallel forward FFT */
 pfft_execute(plan_forw);
+
+/* clear the old input */
+if(in != out) 
+  pfft_clear_input_complex_3d(n, local_ni, local_i_start, in);
 
 /* execute parallel backward FFT */
 pfft_execute(plan_back);
@@ -960,8 +975,7 @@ err = pfft_check_output_complex_3d(n, local_ni, local_i_start, in, comm_cart_2d)
 pfft_printf(comm_cart_2d, "Error after one forward and backward trafo of size n=(%td, %td, %td):\n", n[0], n[1], n[2]);
 pfft_printf(comm_cart_2d, "maxerror = %6.2e;\n", err);
 \end{lstlisting}
-
-
+Hereby, we set all inputs equal to zero after the forward FFT in order to be sure that all the final results are actually computed by the backward FFT instead of being a buggy relict of the forward transform.
 
 
 \subsection{Initializing Real Inputs and Checking Outputs}\label{sec:init-data-3d-r2r}
@@ -990,6 +1004,17 @@ double pfft_check_output_real(
     const pfft_complex *data, MPI_Comm comm);
 \end{lstlisting}
 compute the $l_1$-norm between the elements of array \code{data} and values produced by \code{pfft_init_input_real_3d}, \code{pfft_init_input_real}.
+In addition, we supply the following functions for setting all the input data to zero at once
+\begin{lstlisting}
+void pfft_clear_input_real_3d(
+    const ptrdiff_t *n,
+    const ptrdiff_t *local_n, const ptrdiff_t *local_n_start,
+    double *data);
+void pfft_clear_input_real(
+    int rnk_n, const ptrdiff_t *n,
+    const ptrdiff_t *local_n, const ptrdiff_t *local_start,
+    double *data);
+\end{lstlisting}
 
 Note, that both \code{pfft_init_input_real*} functions will set all array elements to zero were \code{local_n + local_n_start >= n}.
 In addition, both \code{pfft_check_output_real*} function will ignore all the errors resulting from these elements.
@@ -1029,6 +1054,17 @@ double pfft_check_output_complex_hermitian(
     const pfft_complex *data, MPI_Comm comm);
 \end{lstlisting}
 compute the $l_1$-norm between the elements of array \code{data} and values produced by \code{pfft_init_input_complex_hermitian_3d}, \code{pfft_init_input_complex_hermitian}.
+In addition, we supply the following functions for setting all the input data to zero at once
+\begin{lstlisting}
+void pfft_clear_input_complex_hermitian_3d(
+    const ptrdiff_t *n,
+    const ptrdiff_t *local_n, const ptrdiff_t *local_n_start,
+    pfft_complex *data);
+void pfft_clear_input_complex_hermitian(
+    int rnk_n, const ptrdiff_t *n,
+    const ptrdiff_t *local_n, const ptrdiff_t *local_start,
+    pfft_complex *data);
+\end{lstlisting}
 
 Note, that these functions can also be used in order to generate complex inputs with radial Hermitian symmetry for ordinary c2c transforms. 
 Of course the results of such a c2c DFT will have all imaginary parts equal to zero up to machine precision.
