add Yu Feng to acknowledgments

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -157,6 +157,12 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
   \include{reference} % mit Seitenumbruechen
   \include{develop} % mit Seitenumbruechen
 
+  \section*{Acknowledgments}
+  We are thankful to Yu Feng who implemented the new array execute and the clear input functions.
+%   This work was partly supported by the German Ministery of Science and Education (BMBF) under grant 01IH08001.
+%   I am grateful to the J\"ulich Supercomputing Center for providing the computational resources on J\"ulich Blue Gene/P
+%   (\jugene) and J\"ulich Research on Petaflop Architectures (\juropa).
+
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % \selectbiblanguage{english}
   \bibliographystyle{bababbrv-fl}
