--- a/README
+++ b/README
@@ -5,25 +5,45 @@ Overview
 PFFT is a software library written in C for computing parallel fast Fourier  
 transformations. 
 
-For an introduction, please read the paper ''PFFT - An Extension of FFTW to
-Massively Parallel Architectures'' available at 
-  http://www.tu-chemnitz.de/mathematik/preprint/2012/PREPRINT_06.pdf
-At the moment, a detailed user guide to PFFT is not avialable. Nevertheless,
-using PFFT is very similar to FFTW. The interface is as close to the fftw_mpi
+For an introduction, please read the paper 
+  ''PFFT - An Extension of FFTW to Massively Parallel Architectures''
+available at http://www.tu-chemnitz.de/mpip/publikationen.php.en
+This is the most current general paper, and the one that we recommend if you wish 
+to cite PFFT.
+
+The install of PFFT follows the typical steps
+  ./bootstrap.sh
+  ./configure
+  make
+  make install
+Optionally, a bunch of test programs can be built with
+  make check
+
+The bootstrap step can be skipped if you delivered a PFFT tarball,
+i.e., the file configure was already generated.
+Make sure that configure can find a working install of FFTW-3.3 with MPI support,
+i.e., set 
+  CPPFLAGS=$PATHTOFFTW/include
+and
+  LDFLAGS=$PATHTOFFTW/lib64 or LDFLAGS=$PATHTOFFTW/lib
+depending on your system architecture.
+
+PFFT tarballs include a detailed user guide at 
+  doc/manual.pdf
+If you have cloned the PFFT repository, the user manual is automatically built during 'make'.
+Of course this requires a working LaTeX enviroment.
+Alternatively, you can download a recent version of the user manual at
+  http://www.tu-chemnitz.de/~mpip/software.php.en
+
+Note that using PFFT is very similar to FFTW. The interface is as close to the fftw_mpi
 interface as possible. Therefore, it is a good start to read FFTW manual:
   http://www.fftw.org/fftw3_doc
 At least you should understand how FFTW deals with distributed memory FFTs:
   http://www.fftw.org/fftw3_doc/Distributed_002dmemory-FFTW-with-MPI.html#Distributed_002dmemory-FFTW-with-MPI
-Next, you can have a look at the test programs in directory "tests" of the
-source code to learn the details of the PFFT interface.
+Next, you can have a look at the test programs in directory 'tests' to learn the details of the PFFT interface.
 
 For installation instructions, you can also refer to the file INSTALL
 in this directory.
-
-The most current general paper, and the one that we recommend if you wish 
-to cite NFFT, is: The preprint by Pippig, M.
-''PFFT - An Extension of FFTW to Massively Parallel Architectures'',
-available at http://www.tu-chemnitz.de/mathematik/preprint/2012/PREPRINT_06.pdf
 
 
 Directory structure
@@ -33,14 +53,16 @@ aclocal.m4		Macros for configure script
 api (dir)               Source code for user interface
 AUTHORS			Information about the authors of PFFT
 bootstrap.sh		Bootstrap shell script that call Autoconf and friends
+                        in order to generate configure
 build-aux (dir)         Used by configure script
 ChangeLog		A short version history
 config.h.in             Used by configure script
-configure		Configure script
+configure		Configure script build from configure.ac by bootstrap.sh
 configure.in		Autoconf configure script template
 CONVENTIONS             Makro naming conventions for developers
 COPYING			Information about redistributing PFFT
-fconfig.h.in            Used by configure script
+doc (dir)		User and developer documentation
+fconfig.h.in            Used by configure script (Fortran definitions)
 gcell (dir)             Source code for ghost cell support
 include (dir)		Header files
 INSTALL			Installation instructions
@@ -52,16 +74,14 @@ Makefile.in		Makefile template generated from Makefile.am,
 NEWS			New and noteworthy
 pfft.pc.in              Template for PFFT package information
 README			This file
+scripts (dir)           A collection of useful script files
 tests (dir)             Simples examples for using PFFT routines
 TODO			Current work to be done
 util (dir)		Source code for auxilliary routines
 
-# Not yet avialable:
-# doc (dir)		User and developer documentation
-
 Feedback
 --------
-Your comments are welcome! This is the third version of the library and may
+Your comments are welcome! This is the first version of the library and may
 not be as robust or well documented as it should be. Please keep track of bugs
 or missing/confusing instructions and report them to
 
