update contact information

--- a/README
+++ b/README
@@ -108,10 +108,7 @@ Your comments are welcome! This is the first version of the library and may
 not be as robust or well documented as it should be. Please keep track of bugs
 or missing/confusing instructions and report them to
 
-  Michael Pippig <michael.pippig@mathematik.tu-chemnitz.de>
-  TU Chemnitz, Fakultaet fuer Mathematik
-  Reichenhainer Str. 39
-  09107 Chemnitz, GERMANY
+  Michael Pippig <michael.pippig.tuc@gmail.com>
 
 If you find PFFT useful, we would be delighted to hear about what application
 you are using PFFT for!
