--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -130,10 +130,10 @@ pdfauthor={Michael Pippig}, pdfstartview={FitBH}}
       
       \vspace*{3cm}
         Michael Pippig\\
-        Technische Universit\"at Chemnitz\\
-        Faculty of Mathematics\\
-        09107 Chemnitz, Germany\\
-        \href{mailto:michael.pippig@mathematik.tu-chemnitz.de}{michael.pippig@mathematik.tu-chemnitz.de}
+        %Technische Universit\"at Chemnitz\\
+        %Faculty of Mathematics\\
+        %09107 Chemnitz, Germany\\
+        \href{mailto:michael.pippig.tuc@gmail.com}{michael.pippig.tuc@gmail.com}
 
     \vspace*{3cm}
       Download \textbf{\Large P}arallel \textbf{\Large F}ast \textbf{\Large F}ourier \textbf{\Large T}ransform Software Library at \\
