minor: fix typos

--- a/doc/install.tex
+++ b/doc/install.tex
@@ -96,8 +96,8 @@ If you use the install scripts mentioned in Sect.~\ref{sec:pfft-inst}, these pat
 \begin{lstlisting}[escapechar=§,numbers=none]
 PFFTINC = $HOME/local/pfft-§\pfftversion§/include
 FFTWINC = $HOME/local/fftw-§\fftwversion§/include
-PFFTINC = $HOME/local/pfft-§\pfftversion§/lib
-FFTWINC = $HOME/local/fftw-§\fftwversion§/lib
+PFFTLIB = $HOME/local/pfft-§\pfftversion§/lib
+FFTWLIB = $HOME/local/fftw-§\fftwversion§/lib
 \end{lstlisting}
 
 
