--- a/doc/interface.tex
+++ b/doc/interface.tex
@@ -72,7 +72,7 @@ pfft_plan pfft_plan_many_dft(
 \end{lstlisting}
 
 
-\section{Preliminary: Skip Serial Transformations}\label{sec:skip-trafo}
+\section{Skip Serial Transformations Along Single Dimensions}\label{sec:skip-trafo}
 The \code{_skipped} interface extends the \code{_many} interface by adding the possibility to skip some of the serial FFTs.
 \begin{lstlisting}
 pfft_plan pfft_plan_many_dft_skipped(
@@ -83,13 +83,15 @@ pfft_plan pfft_plan_many_dft_skipped(
     pfft_complex *in, pfft_complex *out, MPI_Comm comm_cart,
     int sign, unsigned pfft_flags);
 \end{lstlisting}
-Hereby, \code{skip_trafos} is an \code{int} array of length \code{rnk_pm+1} (\code{rnk_pm} being the mesh dimension of the communicator \code{comm_cart}).
-For \code{t=0,...,rnk_pm} set \code{skip_trafos[t]=1} if the \code{t}-th serial transformation should be computed, otherwise set \code{skip_trafos[t]=0}.
+Hereby, \code{skip_trafos} is an \code{int} array of length \code{rnk_n}. However, at the moment only the first 
+\code{rnk_pm+1} (\code{rnk_pm} being the mesh dimension of the communicator \code{comm_cart}) dimensions are recognized by PFFT.
+For \code{t=0,...,rnk_pm} set \code{skip_trafos[t]=0} if the \code{t}-th serial transformation should be computed, otherwise set \code{skip_trafos[t]=1}.
 Note that the local transpositions are always performed, since they are a prerequisite for the global communication to work.
-At the moment it is only possible to skip the whole serial transform along the last \code{rnk_n-rnk_pm-1} dimensions.
-However, this behaviour can be realized by a call of a \code{(rnk_pm+1)}-dimensional PFFT with
+At the moment it is only possible to skip the whole serial transform along the last \code{rnk_n-rnk_pm-1} dimensions (those dimensions are not distributed in the initial data layout and PFFT computes the serial FFT along these dimensions at once).
+However, this behavior can be realized by a call of a \code{(rnk_pm+1)}-dimensional PFFT with
 \begin{lstlisting}
 for(int t=rnk_pm+1; t<rnk_n; t++)
   howmany *= n[t];
 \end{lstlisting}
 and manual computation of the desired serial transforms along the last \code{rnk_n-rnk_pm-1} dimensions.
+Please inform the author if this feature is desired to be included in the PFFT interface -- at the moment this feature has low priority since it can be done by the user manually.
